# solana-stablecoin-standard

./: .gitignore  Anchor.toml  Cargo.toml  README.md  demo-run.ts  demo.cast  demo.sh  docker-compose.yml  package.json  tsconfig.json
backend/: Dockerfile  package.json
backend/src/: index.ts
backend/src/db/: schema.ts
backend/src/middleware/: auth.ts
backend/src/routes/: events.ts  status.ts  webhooks.ts
backend/src/services/: event-listener.ts  webhook.ts
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  DEVNET.md  OPERATIONS.md  SDK.md  SSS-1.md  SSS-2.md
examples/: 1-basic-sss1.ts  10-full-lifecycle.ts  2-mint-and-burn.ts  3-role-management.ts  4-freeze-and-pause.ts  5-authority-transfer.ts  6-sss2-compliant.ts  7-kyc-workflow.ts  8-blacklist.ts  9-seize-assets.ts  README.md
playground/: index.ts  package.json  tsconfig.json
programs/sss-token/: Cargo.toml
programs/sss-token/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/sss-token/src/instructions/: authority.rs  batch.rs  blacklist.rs  burn.rs  freeze.rs  initialize.rs  mint.rs  mod.rs  multisig.rs  pause.rs  roles.rs  seize.rs  supply_cap.rs  (+2 more)
programs/sss-transfer-hook/: Cargo.toml
programs/sss-transfer-hook/src/: lib.rs
scripts/: devnet-deploy.ts
sdk/cli/: package.json
sdk/cli/src/: config.ts  index.ts
sdk/core/: package.json
sdk/core/src/: compliance.ts  governance.ts  index.ts  pda.ts  presets.ts  roles.ts  stablecoin.ts  types.ts  utils.ts
tests/: edge-cases.test.ts  helpers.ts  package.json  roles.test.ts  sss-1.test.ts  sss-2.test.ts  transfer-hook.test.ts
(+10 files in other folders)
