[workspace]
members = [
    "programs/sss-token",
    "programs/sss-transfer-hook",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
spl-token-2022 = { version = "3.0.5", default-features = false, features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6.5"
spl-tlv-account-resolution = "0.6.5"
spl-type-length-value = "0.4.6"
spl-pod = "0.2.5"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.test]
opt-level = 0
